didn't do anything

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,9 +20,9 @@
 <body>
   <div>
   <h1 id="title"> Resistance is Futile! </h1>
-  <h1 id='end'> You've been ROLLEDRICKED. <i class='em em-sunglasses'></i></h1>
+  <h1 id='end' style="display:none;"> You've been ROLLRICKED. <i class='em em-sunglasses'></i></h1>
   <img id="ricka" src='/media/ricka.gif'>
-  <img id="ricky" src='/media/rickpic.jpg'>
+  <img id="ricky" style="display:none;" src='/media/rickpic.jpg'>
   <video id="video" class="fullscreen" src="/media/rickrollvideo.mp4" autoplay/>
 </body>
 </html>
