--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,9 +18,8 @@
   <title>Do Nothing</title>
 </head>
 <body>
-  <div>
   <h1 id="title"> Resistance is Futile! </h1>
-  <h1 id='end' style="display:none;"> You've been ROLLRICKED. <i class='em em-sunglasses'></i></h1>
+  <h1 id='end' style="display:none;"> You've been RICKROLLED. <i class='em em-sunglasses'></i></h1>
   <img id="ricka" src='/media/ricka.gif'>
   <img id="ricky" style="display:none;" src='/media/rickpic.jpg'>
   <video id="video" class="fullscreen" src="/media/rickrollvideo.mp4" autoplay/>
